[package]
name = "rust_eth"
version = "0.1.0"
edition = "2021"


default-run = "rust_eth"  # Replace with the name of your desired binary


[dependencies]
ethers = { version = "2.0", features = ["rustls","abigen"] }
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.94"
eyre = "0.6"
hex = "0.4"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
which = "7.0.0"


[[bin]]
name = "eth"
path = "src/bin/eth_gas_tracker.rs"


[[bin]]
name = "t-swap"
path ="src/bin/test_swap.rs"


[[bin]]
name = "t-derc20"
path = "src/bin/test_deployERC20.rs"

[[bin]]
name = "t-depositMOO"
path = "src/bin/test_depositMOO.rs"



[[bin]]
name = "block"
path = "src/bin/block.rs"


